--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-animated-number": "^0.4.4",
         "react-copy-to-clipboard": "^5.0.4",
         "react-countdown-hook": "^1.1.1",
+        "react-countup": "^6.2.0",
         "react-dom": "^16.14.0",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
